--- a/src/WeatherData.css
+++ b/src/WeatherData.css
@@ -75,6 +75,8 @@
   text-align: end;
   padding: 0px;
   margin: 20px 0px 0px;
+  position: relative;
+  bottom: 5px;
 }
 
 .weather-data ul.weather-list {
