--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,22 +1,22 @@
-.SearchEngine .search-button {
+.search-button {
   background-color: lavender;
   color: #38598b;
   border: none;
 }
 
-.SearchEngine.search-button:hover {
+.search-button:hover {
   background-color: lavender;
   color: #38598b;
   transition: all 200ms ease-in-out;
   opacity: 0.7;
 }
-.SearchEngine.current-button {
+.current-button {
   background-color: #38598b;
   color: white;
   border: none;
 }
 
-.SearchEngine.current-button:hover {
+.current-button:hover {
   background-color: #38598b;
   color: white;
   transition: all 200ms ease-in-out;
